[tool.poetry]
name = "aws-org-contacts"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aioboto3 = "^13.1.1"
types-aioboto3 = {extras = ["account", "organizations", "sts"], version = "^13.1.1"}
dataclasses-json = "^0.6.7"
asynciolimiter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
